--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
+body{
+ margin: 0;
+}
+.wrapper{
+  margin: auto;
+  width: 80%;
+  border: dashed 1px red;
+}
 .main-content__title {
   font-family:'Roboto', sans-serif;
 }
+.header {
+  border: dashed 1px red;
+  display:flex;
+  justify-content:space-between;
+}
+.logo{
+  padding:40px 0;
+}
+.menu{
+  display:flex;
+  align-items:center;
+}
+.menu__item{
+  padding: 0,13px;
+  border:dashed 1px red;
+}
+.menu__item:last-chaild{
+  padding: 0;
+}
+
 
