--- a/style.css
+++ b/style.css
@@ -13,8 +13,28 @@ body{
   justify-content:space-between;
 }
 .logo{
+  position: relative;
   padding: 40px 0;
-  font-family: pt_serif, arial, helvetica, sans-serif;
+  padding-left: 44px;
+  font:bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+}
+.logo__circle{
+  position:absolute;
+  left: 0;
+  top: 50%;
+  transform:translateY(-50%);
+  width: 28px;
+  height: 28px;
+  border-radius:50%;
+  opacity: .7;
+}
+.logo__circle_color_dark-blue{
+  background:#0056EC;
+}
+.logo__circle_color_blue{
+  left: 8px;
+  top: 56%;
+  background:#C8DBFB;
 }
 .menu{
   display:flex;
@@ -26,6 +46,3 @@ body{
 .menu__item:last-child{
   padding-right: 0;
 }
-
-
-
