--- a/style.css
+++ b/style.css
@@ -5,12 +5,38 @@ body{
   margin: auto;
   width: 80%;
 }
-.main-content__title{
-  font-family:'Roboto', sans-serif;
+.main{
+  padding:0 63% 100px 0;
+  background: top right no-repeat url(img/mainlmg.svg);
+}
+.main__title{
+  margin: 0 0 40px 0;
+  font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+}
+.main__title-text_highlight{
+  background:#ECF3FF;
+}
+.main__subtitle{
+  margin: 0 0 41px 0;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+}
+.main__button{
+  display: inline-block;
+  padding: 14px 16px;
+  font: 14px/16px Roboto, arial, helvetica, sans-serif;
+  color: #fff;
+  background: #0056EC;
+  text-decoration:none;
+  border-radius: 4px;
+  transition: opacity .5s;
+}
+.main__button:hover{
+  opacity: .5;
 }
 .header{
   display:flex;
   justify-content:space-between;
+  margin-bottom: 100px;
 }
 .logo{
   position: relative;
@@ -37,8 +63,8 @@ body{
   background:#C8DBFB;
 }
 .menu{
-  display:flex;
-  align-items:center;
+  display: flex;
+  align-items: center;
 }
 .menu__item{
   position:relative;
@@ -67,5 +93,5 @@ body{
 }
 .menu__item:hover:after,.menu__item_active:after{
   opacity:1;
-  width: 100%
+  width: 100%;
 }
